fix: improve the image cropping in home page

--- a/src/pages/yield-flow-case-study/YieldFlowCaseStudy.module.css
+++ b/src/pages/yield-flow-case-study/YieldFlowCaseStudy.module.css
@@ -681,6 +681,7 @@
   align-items: center;
   gap: var(--pr-spacing-4);
   font-family: Arial, sans-serif;
+  min-width: 1100px;
 }
 
 .spreadsheetName {
@@ -797,6 +798,7 @@
   display: flex;
   gap: 1px;
   font-family: Arial, sans-serif;
+  min-width: 1100px;
 }
 
 .spreadsheetTab {
